# memory-management-os

./: .gitignore  CMakeLists.txt
include/: allocation_simulator.hpp  demand_paging_simulator.hpp  http_server.hpp  json_utils.hpp  models.hpp  multi_level_paging_simulator.hpp  paging_simulator.hpp  segmentation_simulator.hpp  thrashing_simulator.hpp  translation_simulator.hpp  utils.hpp  web_assets.hpp
src/: main.cpp
src/core/: http_server.cpp  json_utils.cpp  utils.cpp  web_assets.cpp
src/simulators/: allocation_simulator.cpp  demand_paging_simulator.cpp  multi_level_paging_simulator.cpp  paging_simulator.cpp  segmentation_simulator.cpp  thrashing_simulator.cpp  translation_simulator.cpp
web/: app.js  index.html  styles.css
